# WhiteHatBot

./: .gitignore  Cargo.toml  README.md  botconfig_example.toml
src/: main.rs  utils.rs
src/commands/: common.rs  mod.rs  no_prefix.rs  owner.rs  role_applications.rs
