cargo-features = ["strip"]

[package]
name = "WhiteHatBot"
version = "0.1.0"
authors = ["bergabman https://discord.gg/whAx4qh"]
edition = "2018"

[dependencies]
anyhow = "1.0"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
urlencoding = "1.1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2" # needed so intrument works with async functions.
serenity = { version = "0.9.0-rc.3", features = ["cache", "framework", "standard_framework", "rustls_backend"] }

[dependencies.tokio]
version = "0.2"
features = ["macros", "signal"]

[profile.release]
strip = 'symbols' # strip simbols equals to strip --strip-all
#opt-level = 'z'  # Optimize for size.
lto = true # enable link time optimization
panic = 'abort'
codegen-units = 1