cargo-features = ["strip"]

[package]
name = "WhiteHatBot"
version = "0.1.0"
authors = ["bergabman https://discord.gg/whAx4qh"]
edition = "2018"

[dependencies]
anyhow = "1.0"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
urlencoding = "2.1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2" # needed so intrument works with async functions.
serenity = { version = "0.10.0", features = [
    "cache",
    "framework",
    "standard_framework",
    "rustls_backend",
] }

[dependencies.tokio]
version = "1.10.0"
features = ["macros", "signal", "rt-multi-thread"]

[profile.release]
strip = 'symbols' # strip simbols equals to strip --strip-all
#opt-level = 'z'  # Optimize for size.
lto = true        # enable link time optimization
panic = 'abort'
codegen-units = 1
